--- a/src/components/atoms/BlogPostPreview/BlogPostPreview.module.css
+++ b/src/components/atoms/BlogPostPreview/BlogPostPreview.module.css
@@ -20,7 +20,6 @@
 }
 
 .publishedDate {
-  opacity: 0.6;
   font-size: 1rem;
   margin: 0;
 }
